--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Symfony 2</h3>
+                        <h3 class="level-title">Symfony 2.x / 3.x</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="75%">
                             </div>
@@ -257,7 +257,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">ReactJS</h3>
+                        <h3 class="level-title">VueJS</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="50%">
                             </div>
@@ -288,7 +288,7 @@
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
                 <small class="copyright">
-                    Serge Basset - 2019.04<br />
+                    Serge Basset - 2019.08<br />
                     Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers
                 </small>
         </div>
