Change mail & tel by images to avoid spam

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <!--//profile-container-->
-            <div class="profile-container">
+            <div class="profile-container container-block">
                 <img class="profile" src="assets/images/profile.png" alt="" />
                 <h2 class="name">Serge Basset</h2>
                 <h3 class="tagline">Développeur Full Stack Freelance</h3>
@@ -39,12 +39,22 @@
             <!--//contact-container-->
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: sergebasset.26@gmail.com">sergebasset.26@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel: 0622951463">06 22 95 14 63</a></li>
-                    <!--<li class="website"><i class="fa fa-globe"></i><a href="http://www.google.fr" target="_blank">mywebsite.com</a></li>-->
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/serge-basset" target="_blank">in/serge-basset</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/FuturInformatique" target="_blank">github/FuturInformatique</a></li>
-                    <!--<li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/Dagorath26" target="_blank">@twitter</a></li>-->
+                    <li class="email">
+						<i class="fa fa-envelope"></i>
+						<img src="assets/images/mail.png" alt="" />
+					</li>
+                    <li class="phone">
+						<i class="fa fa-phone"></i>
+						<img src="assets/images/tel.png" alt="" />
+					</li>
+					<li class="linkedin">
+						<i class="fa fa-linkedin"></i>
+						<a href="https://www.linkedin.com/in/serge-basset" target="_blank">in/serge-basset</a>
+					</li>
+                    <li class="github">
+						<i class="fa fa-github"></i>
+						<a href="https://github.com/FuturInformatique" target="_blank">github/FuturInformatique</a>
+					</li>
                 </ul>
             </div>
 
