--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
                             </div>
                         </div>
                     </div>
+					
+					<div class="item">
+                        <h3 class="level-title">Api REST</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div>
+                    </div>
+					
+					<div class="item">
+                        <h3 class="level-title">VueJS</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="item">
                         <h3 class="level-title">Symfony 2.x / 3.x</h3>
@@ -262,22 +278,6 @@
                         <h3 class="level-title">MySQL / Doctrine 2</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="70%">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <h3 class="level-title">VueJS</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="50%">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <h3 class="level-title">Python / C / C++</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="20%">
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
                 <small class="copyright">
-                    Serge Basset - 2019.08<br />
+                    Serge Basset - 2020.02<br />
                     Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers
                 </small>
         </div>
