Change e-mail with professional one, remove phone number (spam)

--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email">
 						<i class="fa fa-envelope"></i>
-						<img src="assets/images/mail.png" alt="" />
-					</li>
-                    <li class="phone">
-						<i class="fa fa-phone"></i>
-						<img src="assets/images/tel.png" alt="" />
+                        <a href="mailto: futurinformatique26[at]gmail{dot}com">futurinformatique26@gmail.com</a>
 					</li>
 					<li class="linkedin">
 						<i class="fa fa-linkedin"></i>
@@ -96,8 +92,8 @@
                     <li>Airsoft</li>
                 </ul>
             </div>
+        </div>
 
-        </div><!--//sidebar-wrapper-->
 
         <div class="main-wrapper">
 
