Add new freelance experience, reorder experiences

--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
                         </div>
                     </div>
 
+                    <div class="company">Maison des Sciences Humaines - Lyon St Etienne </div>
+                    <div class="details">
+                        <p>
+                            Conception et développement d'une application avec back-end en Symfony 3.4 et front-end en VueJS, le tout dialoguant uniquement via des API REST.<br />
+                            La plateforme devait permettre le stockage, le visonnage, et le versionning de document sur un serveur Gitlab, sans que l'utilisateur n'ai besoin de manipuler Git.
+                        </p>
+                        <ul>
+                            <li><em>Techno : </em>Framework Symfony 3.4, VueJS, Vuex, PHP7, HTML5, CCS3, Boostrap, Javascript ES6, Doctrine2, Composer, Gitlab API, Swagger</li>
+                            <li><em>Outils : </em>Gitlab, Trello, Postman, PhpStorm, GitKraken</li>
+                        </ul>
+                    </div>
+
                     <div class="company">Decalog SAS</div>
                     <div class="details">
                         <p>Contribution à divers projets en mode Saas depuis 2012, avec utilisation de diverses technologies web.</p>
@@ -116,6 +128,18 @@
                             <li><em>Techno : </em>PHP5/7, HTML5, CCS3, Boostrap, Javascript, ReactJS, TypeScript, MySQL, Doctrine2, API REST Swagger, Composer, NodeJs, NPM</li>
                             <li><em>Outils : </em>VirtualBox, YouTrack, GitKraken, GitLab, Trello, NetBeans, PhpStorm, MySQL Workbench, Postman</li>
                             <li><em>Methodologie : </em>Agile Scrum</li>
+                        </ul>
+                    </div>
+
+                    <div class="company">Winzana</div>
+                    <div class="details">
+                        <p>
+                            Développement d'une application sous Symfony 2, pour les pratiquants du domaine de la santé.<br />
+                            Elle permet le recensement dans un annuaire par ville et par type de pratique de santé, la prise de rendez-vous en ligne, etc ...
+                        </p>
+                        <ul>
+                            <li><em>Techno : </em>Framework Symfony2, PHP5, HTML5, CCS3, Boostrap, Twig, jQuery, Doctrine2, Composer</li>
+                            <li><em>Outils : </em>Git</li>
                         </ul>
                     </div>
 
@@ -129,18 +153,6 @@
                         <ul>
                             <li><em>Techno : </em>PHP5, HTML5, CCS3, Boostrap, Twig, Javascript, jQuery, MySQL, OpenSeaDragon, SolR, Webservice, API</li>
                             <li><em>Outils : </em>YouTrack, RedMine, Git</li>
-                        </ul>
-                    </div>
-
-                    <div class="company">Winzana</div>
-                    <div class="details">
-                        <p>
-                            Développement d'une application sous Symfony 2, pour les pratiquants du domaine de la santé.<br />
-                            Elle permet le recensement dans un annuaire par ville et par type de pratique de santé, la prise de rendez-vous en ligne, etc ...
-                        </p>
-                        <ul>
-                            <li><em>Techno : </em>Framework Symfony2, PHP5, HTML5, CCS3, Boostrap, Twig, jQuery, Doctrine2, Composer</li>
-                            <li><em>Outils : </em>Git</li>
                         </ul>
                     </div>
 
