Update freelance experience and skills 2021-08

--- a/index.html
+++ b/index.html
@@ -109,7 +109,20 @@
                         </div>
                     </div>
 
-                    <div class="company">Maison des Sciences Humaines - Lyon St Etienne </div>
+                    <div class="company">Webikeo - Aix-en-Provence</div>
+                    <div class="details">
+                        <p>
+                            Développement et maintenance d'une plateforme de webinar orientée B2B, avec back-end API REST en Symfony 4.2 et front-end en React.<br />
+                            La plateforme permet aux utilisateurs de créer leurs webinars en ligne, gère les prises de rendez-vous avec les techniciens et comprends divers outils professionnels (KPI, Emailing, accès limités, ...).
+                        </p>
+                        <ul>
+                            <li><em>Techno : </em>Symfony 4.2, PHPUnit, React 16, Redux, Cypress, PHP7, HTML5, CCS3, Boostrap, Immutable, Doctrine2, Composer</li>
+                            <li><em>Outils : </em>Docker, Bitbucket, Trello, Postman, PhpStorm, GitKraken, Miro, Jira, Zendesk, Timify</li>
+                            <li><em>Methodologie : </em>Agile Scrum</li>
+                        </ul>
+                    </div>
+
+                    <div class="company">Maison des Sciences Humaines - Lyon St Etienne</div>
                     <div class="details">
                         <p>
                             Conception et développement d'une application avec back-end en Symfony 3.4 et front-end en VueJS, le tout dialoguant uniquement via des API REST.<br />
@@ -142,20 +155,6 @@
                             <li><em>Outils : </em>Git</li>
                         </ul>
                     </div>
-
-                    <div class="company">CD-Script</div>
-                    <div class="details">
-                        <p>Développement de portails web pour ressources numériques : e-books, documents patrimoniaux, ...</p>
-                        <p>
-                            Implémentation d'une visionneuse pour des revues de presses anciennes et des documents de recensement.<br />
-                            Développement de divers services participatifs en ligne : correction d'OCR, transcription de date et de nom, dépôt de documents, ...
-                        </p>
-                        <ul>
-                            <li><em>Techno : </em>PHP5, HTML5, CCS3, Boostrap, Twig, Javascript, jQuery, MySQL, OpenSeaDragon, SolR, Webservice, API</li>
-                            <li><em>Outils : </em>YouTrack, RedMine, Git</li>
-                        </ul>
-                    </div>
-
                 </div>
             </section>
 
@@ -230,9 +229,9 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Javascript / jQuery</h3>
+                        <h3 class="level-title">Symfony 3.x / 4.x</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="100%">
                             </div>
                         </div>
                     </div>
@@ -244,9 +243,17 @@
                             </div>
                         </div>
                     </div>
-					
+
+                    <div class="item">
+                        <h3 class="level-title">React / Redux</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div>
+                    </div>
+
 					<div class="item">
-                        <h3 class="level-title">VueJS</h3>
+                        <h3 class="level-title">VueJS / Vuex</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="80%">
                             </div>
@@ -254,9 +261,9 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Symfony 2.x / 3.x</h3>
+                        <h3 class="level-title">Javascript / jQuery</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="75%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div>
                     </div>
@@ -285,7 +292,7 @@
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
                 <small class="copyright">
-                    Serge Basset - 2020.10<br />
+                    Serge Basset - 2021.08<br />
                     Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers
                 </small>
         </div>
