Update freelance experience and skills 2022-07
Update head title, description and author.  
Update Skills section.  
Update details in freelance section.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Responsive Resume/CV Template for Developers</title>
+    <title>Serge Basset - Responsive Resume</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+    <meta name="description" content="Up-to-date Responsive HTML5 Resume">
+    <meta name="author" content="Serge Basset">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
@@ -102,7 +102,7 @@
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Compétences</h2>
                 <div class="skillset">
                     <div class="item">
-                        <h3 class="level-title">PHP5 / PHP7</h3>
+                        <h3 class="level-title">Symfony 4.x / 5.x</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="100%">
                             </div>
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">HTML5 / CSS3 / Bootstrap</h3>
+                        <h3 class="level-title">PHP7 / PHP8</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="100%">
                             </div>
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Symfony 3.x / 4.x</h3>
+                        <h3 class="level-title">HTML5 / CSS3 / Bootstrap</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="100%">
                             </div>
@@ -191,13 +191,13 @@
                     <div class="company">Webikeo - Aix-en-Provence</div>
                     <div class="details">
                         <p>
-                            Développement et maintenance d'une plateforme de webinar orientée B2B, avec back-end API REST en Symfony 4.2 et front-end en React.<br />
+                            Développement et maintenance d'une plateforme de webinar orientée B2B, avec back-end API REST en Symfony 5.4 et front-end en React.<br />
                             La plateforme permet aux utilisateurs de créer leurs webinars en ligne, gère les prises de rendez-vous avec les techniciens et comprends divers outils professionnels (KPI, Emailing, accès limités, ...).
                         </p>
                         <ul>
-                            <li><em>Techno : </em>Symfony 4.2, PHPUnit, React 16, Redux, Cypress, PHP7, HTML5, CCS3, Boostrap, Immutable, Doctrine2, Composer</li>
-                            <li><em>Outils : </em>Docker, Bitbucket, Trello, Postman, PhpStorm, GitKraken, Miro, Jira, Zendesk, Timify</li>
-                            <li><em>Methodologie : </em>Agile Scrum</li>
+                            <li><em>Techno : </em>Symfony 5.4 (et 4.2), PHPUnit, React 16, Redux, Cypress, PHP7, HTML5, CCS3, Boostrap, Immutable, Doctrine2</li>
+                            <li><em>Outils : </em>Docker, Composer, Bitbucket, Trello, Postman, PhpStorm, GitKraken, Miro, Zendesk, Timify</li>
+                            <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
                     </div>
 
@@ -205,7 +205,7 @@
                     <div class="details">
                         <p>
                             Conception et développement d'une application avec back-end en Symfony 3.4 et front-end en VueJS, le tout dialoguant uniquement via des API REST.<br />
-                            La plateforme devait permettre le stockage, le visonnage, et le versionning de document sur un serveur Gitlab, sans que l'utilisateur n'ai besoin de manipuler Git.
+                            La plateforme permet le stockage, le visonnage, et le versionning de document sur un serveur Gitlab, sans que l'utilisateur ait besoin de manipuler Git.
                         </p>
                         <ul>
                             <li><em>Techno : </em>Framework Symfony 3.4, VueJS, Vuex, PHP7, HTML5, CCS3, Boostrap, Javascript ES6, Doctrine2, Composer, Gitlab API, Swagger</li>
@@ -215,7 +215,7 @@
 
                     <div class="company">Decalog SAS</div>
                     <div class="details">
-                        <p>Contribution à divers projets en mode Saas depuis 2012, avec utilisation de diverses technologies web.</p>
+                        <p>Contribution à divers projets en mode Saas, avec utilisation de diverses technologies web.</p>
                         <ul>
                             <li><em>Techno : </em>PHP5/7, HTML5, CCS3, Boostrap, Javascript, ReactJS, TypeScript, MySQL, Doctrine2, API REST Swagger, Composer, NodeJs, NPM</li>
                             <li><em>Outils : </em>VirtualBox, YouTrack, GitKraken, GitLab, Trello, NetBeans, PhpStorm, MySQL Workbench, Postman</li>
@@ -291,8 +291,8 @@
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
                 <small class="copyright">
-                    Serge Basset - 2021.08<br />
-                    Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers
+                    Serge Basset - 2022.07<br />
+                    <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 </small>
         </div>
     </footer>
