Update skills and job, add techno badges

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="sidebar-wrapper">
             <!--//profile-container-->
             <div class="profile-container container-block">
-                <img class="profile" src="assets/images/profile.png" alt="" />
+                <img class="profile" src="assets/images/profile2.png" alt="" />
                 <h2 class="name">Serge Basset</h2>
                 <h3 class="tagline">Développeur Full Stack Freelance</h3>
             </div>
@@ -98,7 +98,7 @@
         <div class="main-wrapper">
 
             <!--//skills-section-->
-            <section class="skills-section section">
+            <section class="section skills-section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Compétences</h2>
                 <div class="skillset">
                     <div class="item">
@@ -142,6 +142,14 @@
                     </div>
 
                     <div class="item">
+                        <h3 class="level-title">NextJS</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
                         <h3 class="level-title">React / Redux</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
@@ -150,7 +158,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">VueJS / Vuex</h3>
+                        <h3 class="level-title">StoryBook</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="80%">
                             </div>
@@ -158,9 +166,9 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Javascript / jQuery</h3>
+                        <h3 class="level-title">VueJS / Vuex</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="50%">
                             </div>
                         </div>
                     </div>
@@ -168,12 +176,202 @@
                     <div class="item">
                         <h3 class="level-title">MySQL / Doctrine 2</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
+                            <div class="level-bar-inner" data-level="50%">
                             </div>
                         </div>
                     </div>
 
                 </div>
+            </section>
+
+            <!--//tags-section-->
+            <section class="section tag-section">
+              <h2 class="section-title"><i class="fa fa-gears"></i>Technos et Outils</h2>
+
+              <div class="item">
+                <span class="label label-pill label-primary">
+                  PHP 7 / 8
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-primary">
+                  JavaScript ES5 / ES6
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-primary">
+                  HTML5
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-primary">
+                  CSS3
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  Symfony 5 / 4
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  SASS / LESS
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Git
+                  <span class="badge badge-light">10+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Composer
+                  <span class="badge badge-light">10+</span>
+                </span>
+              </div>
+
+              <div class="item">
+                <span class="label label-pill label-success">
+                  React 16
+                  <span class="badge badge-light">8+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  PHPUnit
+                  <span class="badge badge-light">8+</span>
+                </span>
+              </div>
+
+              <div class="item">
+                <span class="label label-pill label-default">
+                  Docker
+                  <span class="badge badge-light">6+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Trello
+                  <span class="badge badge-light">6+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Postman
+                  <span class="badge badge-light">6+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  PhpStorm
+                  <span class="badge badge-light">6+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  GitKraken
+                  <span class="badge badge-light">6+</span>
+                </span>
+              </div>
+
+              <div class="item">
+                <span class="label label-pill label-success">
+                  Redux
+                  <span class="badge badge-light">4+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  Cypress
+                  <span class="badge badge-light">4+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  Immutable
+                  <span class="badge badge-light">4+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Miro
+                  <span class="badge badge-light">4+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  NodeJS, NPM, Yarn
+                  <span class="badge badge-light">4+</span>
+                </span>
+              </div>
+
+              <div class="item">
+                <span class="label label-pill label-success">
+                  NextJS
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  StoryBook
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  Prisma
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Lerna
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  Swagger
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-warning">
+                  GTM
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-warning">
+                  Zendesk
+                  <span class="badge badge-light">2+</span>
+                </span>
+
+                <span class="label label-pill label-warning">
+                  Timify
+                  <span class="badge badge-light">2+</span>
+                </span>
+              </div>
+
+              <div class="item">
+                <span class="label label-pill label-success">
+                  VueJS
+                  <span class="badge badge-light">1</span>
+                </span>
+
+                <span class="label label-pill label-success">
+                  Vuex
+                  <span class="badge badge-light">1</span>
+                </span>
+
+                <span class="label label-pill label-warning">
+                  Gitlab API
+                  <span class="badge badge-light">1</span>
+                </span>
+              </div>
+
+              <div class="item">
+                <h3 class="legend">Légende :</h3>
+                <p><small>Le chiffre dans le badge représente le nombres d'années d'expérience</small></p>
+
+                <span class="label label-pill label-primary">
+                  Langages
+                </span>
+                <span class="label label-pill label-success">
+                  Frameworks / Librairies
+                </span>
+                <span class="label label-pill label-default">
+                  Outils
+                </span>
+                <span class="label label-pill label-warning">
+                  API Externes
+                </span>
+              </div>
             </section>
 
             <!--//freelance-section-->
@@ -188,14 +386,15 @@
                         </div>
                     </div>
 
-                    <div class="company">Webikeo - Aix-en-Provence</div>
+                    <div class="company">Webikeo - Aix-en-Provence (<i class="fa fa-anchor"></i><a href="https://webikeo.fr" target="_blank">Site public Webikeo</a>)</div>
                     <div class="details">
                         <p>
-                            Développement et maintenance d'une plateforme de webinar orientée B2B, avec back-end API REST en Symfony 5.4 et front-end en React.<br />
+                            Développement et maintenance d'une plateforme de webinar orientée B2B, avec back-end API REST en Symfony 5.4, front-end client en React 16, et front-end public en NextJS.<br />
                             La plateforme permet aux utilisateurs de créer leurs webinars en ligne, gère les prises de rendez-vous avec les techniciens et comprends divers outils professionnels (KPI, Emailing, accès limités, ...).
                         </p>
                         <ul>
-                            <li><em>Techno : </em>Symfony 5.4 (et 4.2), PHPUnit, React 16, Redux, Cypress, PHP7, HTML5, CCS3, Boostrap, Immutable, Doctrine2</li>
+                            <li><em>Techno Back-end: </em>Symfony 5.4 (et 4.2), PHP7, Doctrine2, PHPUnit</li>
+                            <li><em>Techno Front-end: </em>NextJS, StoryBook, Prisma, Lerna, React 16, Redux, Cypress, HTML5, CCS3, Boostrap, Immutable</li>
                             <li><em>Outils : </em>Docker, Composer, Bitbucket, Trello, Postman, PhpStorm, GitKraken, Miro, Zendesk, Timify</li>
                             <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
@@ -290,7 +489,7 @@
                     If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
-                <div class="mb-30">Serge Basset - 2022.07</div>
+                <div class="mb-30">Serge Basset - 2023.11</div>
                 <div>
                     <small>Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 </div>
@@ -305,4 +504,3 @@
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
-
