Update interests and skills 2024-04

--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Centres d'intérêts</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Jeux vidéos</li>
-                    <li>Jeux de rôles</li>
-                    <li>Moto</li>
-                    <li>Badminton</li>
-                    <li>Voyages</li>
-                    <li>Airsoft</li>
+                    <li>Jeux vidéos, Jeux de rôles</li>
+                    <li>Moto, Voyages</li>
+                    <li>Spacial, astronomie</li>
+                    <li>Badminton, Airsoft</li>
                 </ul>
             </div>
         </div>
@@ -110,7 +108,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">PHP7 / PHP8</h3>
+                        <h3 class="level-title">PHP 7/8 / PHPUnit</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="100%">
                             </div>
@@ -134,7 +132,15 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Git</h3>
+                        <h3 class="level-title">React / TypeScript</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">JavaScript / Cypress</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
                             </div>
@@ -150,9 +156,9 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">React / Redux</h3>
+                        <h3 class="level-title">Git / CI</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="85%">
                             </div>
                         </div>
                     </div>
@@ -160,7 +166,7 @@
                     <div class="item">
                         <h3 class="level-title">StoryBook</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="75%">
                             </div>
                         </div>
                     </div>
@@ -489,7 +495,7 @@
                     If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
-                <div class="mb-30">Serge Basset - 2023.11</div>
+                <div class="mb-30">Serge Basset - 2024.04</div>
                 <div>
                     <small>Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 </div>
