Add link to online resume in contact container

--- a/index.html
+++ b/index.html
@@ -40,17 +40,21 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email">
-						<i class="fa fa-envelope"></i>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                         <a href="mailto: futurinformatique26[at]gmail{dot}com">futurinformatique26@gmail.com</a>
-					</li>
-					<li class="linkedin">
-						<i class="fa fa-linkedin"></i>
-						<a href="https://www.linkedin.com/in/serge-basset" target="_blank">in/serge-basset</a>
-					</li>
+                    </li>
+          					<li class="linkedin">
+            						<i class="fa fa-linkedin" aria-hidden="true"></i>
+            						<a href="https://www.linkedin.com/in/serge-basset" target="_blank">in/serge-basset</a>
+          					</li>
                     <li class="github">
-						<i class="fa fa-github"></i>
-						<a href="https://github.com/FuturInformatique" target="_blank">github/FuturInformatique</a>
-					</li>
+            						<i class="fa fa-github" aria-hidden="true"></i>
+            						<a href="https://github.com/FuturInformatique" target="_blank">github/FuturInformatique</a>
+          					</li>
+                    <li class="resume">
+                        <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                        <a href="https://futurinformatique.github.io/index.html" target="_blank">CV en ligne</a>
+                    </li>
                 </ul>
             </div>
 
